# Pharmax-backend

./: .env.example  .gitignore  PROJECT_STRUCTURE.md  README.md  api_test_report.md  final_api_test_report.md  pyproject.toml  test_results_summary.md
app/: admin.py  main.py  stucture.txt
app/api/: router.py
app/api/routes/: invoices_route.py  items.py  products_route.py
app/core/: config.py  dependencies.py  security.py
app/db/: session.py
app/models/: __init__.py  invoice_table.py  product_table.py  stock_adjustment_table.py  user_table.py
app/schemas/: invoice_item_schema.py  invoice_schema.py  product_unit_schema.py  products_schema.py  stockAdjustment_schema.py  stock_adjustment_schema.py
app/services/: audit_service.py  invoice_service.py  product_service.py
scripts/: seed_dev_data.py
tests/: test_auth_rbac.py  test_invoices_flow.py
